[project]
name = "c6t"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonathan Harper", email = "39912347+jharper-sec@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.0",
    "shellingham>=1.5.4",
    "rich>=13.7.1",
    "typer[all]>=0.12.3",
    "annotated-types>=0.6.0",
    "types-requests>=2.31.0.20240406",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "inquirerpy>=0.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
c6t = "c6t.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.2.1",
    "black>=24.4.2",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/c6t"]
