[project]
name = "c6t"
version = "0.0.2"
description = "Unofficial Administrative Command Line Interface for Contrast Security"
authors = [
    { name = "Jonathan Harper", email = "39912347+jharper-sec@users.noreply.github.com" },
]
dependencies = [
    "requests>=2.32.0",
    "shellingham>=1.5.4",
    "rich>=13.7.1",
    "typer[all]>=0.12.3",
    "annotated-types>=0.6.0",
    "types-requests>=2.31.0.20240406",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "gitpython>=3.1.43",
    "pyinquirer>=1.0.3",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jharper-sec/c6t"
Issues = "https://github.com/jharper-sec/c6t/issues"
Documentation = "https://github.com/jharper-sec/c6t/blob/main/README.md"

[project.scripts]
c6t = "c6t.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.2.1",
    "black>=24.4.2",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/c6t"]
